MAJ projet gradient

--- a/Gradient-generator-project/gradient-generator.html
+++ b/Gradient-generator-project/gradient-generator.html
@@ -42,31 +42,31 @@
                 </div>
             </div>
             <div class="cards-container">
+                <p class="responsive">This project is designed with Material Design principles, focusing on clean interfaces, bold colors, and user-friendly interactions for a seamless experience. This project offers a visually appealing, user-centric environment, prioritizing simplicity and functionality.</p>
                 <div class="project-card project-card-video">
                     <img src="../ressources/gradient-temp.png" class="video-placeholder" alt="Placeholder Image John Scissors project">
-                    <video src="../ressources/video-gradient.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
+                    <video class="video-projet" autoplay loop muted preload="auto"></video>
                 </div>
                 <p class="responsive">The application allows for both color picking and manual input of color codes.</p>
                 <div class="project-card project-card-desktop">
-                    <div class="image-container">
+                    <div class="image-container color-picker">
                         <img src="../ressources/gradient-desktop1.png" alt="Isaure Lohest web developement project 2 - color picker">
                     </div>
-                    <div class="image-container">
+                    <div class="image-container  manual-input">
                         <img src="../ressources/gradient-desktop2.png" alt="Isaure Lohest web developement project 2 - manual input of color code">
                     </div>
                 </div>
-                <p class="responsive">The user can choose the type of gradient (linear/radial) and adjust various parameters such as tilt, radius, background repetition, size, shuffle color picking, etc.</p>
+                <p class="responsive">The user can choose the type of gradient (linear or radial) and adjust various parameters such as tilt, radius, background repetition, size, shuffle color picking, etc.</p>
                 <div class="project-card project-card-desktop">
-                    <div class="image-container">
-                        <img src="../ressources/gradient-desktop3.png" alt="Isaure Lohest web developement project 2 - linear gradient">
+                    <div class="image-container radial-gradient">
+                        <img src="../ressources/gradient-desktop3.png" alt="Isaure Lohest web developement project 2 - radial gradient">
                     </div>
-                    <div class="image-container">
-                        <img src="../ressources/gradient-desktop4.png" alt="Isaure Lohest web developement project 2 - radial gradient">
+                    <div class="image-container linear-gradient">
+                        <img src="../ressources/gradient-desktop4.png" alt="Isaure Lohest web developement project 2 - linear gradient">
                     </div>
                 </div>
                 
                 <div class="check"><a href="Gradient-generator/index.html" class="button" target="_blank">Check it out</a></div>
-
             </div>
             <div class="bird-container gauche-droite">
                 <div class="bird bird-light"></div>
