ajout du projet didacmania + border-radius des cartes & boutons

--- a/Creyda-project/creyda-project.html
+++ b/Creyda-project/creyda-project.html
@@ -32,18 +32,18 @@
             <h2>Creyda yoga</h2>
             <div class="project-info">A yoga website built in Wordpress for CREYDA Yoga, a yoga and welness center managed by passionate people.</div>
             <div class="project-container">
-                <div class="project-resp">
+                <div class="project-resp creyda">
                     <h2>Responsibilities</h2>
                     <p>Recovery of content from the former dysfunctional website, Web design, Wordpress Setup and Development, Domain Transfer, Launch</p>
                 </div>
-                <div class="project-url">
+                <div class="project-url creyda">
                     <h2>URL</h1>
                     <a href="https://creyda-yoga.be/" target="_blank">https://creyda-yoga.be/</a>
                 </div>
             </div>
             <div class="cards-container">
                 <div class="project-card project-card-video">
-                    <img src="../ressources/creyda-temp.png" class="video-placeholder" alt="Placeholder Image John Scissors project">
+                    <img src="../ressources/creyda-temp.png" class="video-placeholder" alt="Placeholder Image Creyda project">
                     <video src="../ressources/video-creyda-short.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
                 </div>
                 <div class="project-card project-card-desktop">
@@ -87,8 +87,8 @@
             <img src="../ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
             <div class="slider-container">
                 <div class="slider slider-light">
-                    <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
-                    <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
+                    <span>Design * Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
+                    <span>Design * Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
                 </div>
             </div>
         </footer>
