--- a/Gradient-generator-project/gradient-generator.html
+++ b/Gradient-generator-project/gradient-generator.html
@@ -32,11 +32,11 @@
             <h2>Gradient generator</h2>
             <div class="project-info">A web application that enables the creation of a wide variety of gradients, providing users with the ability to obtain the associated CSS code.</div>
             <div class="project-container">
-                <div class="project-resp">
+                <div class="project-resp gradient">
                     <h2>Responsibilities</h2>
                     <p>Conceptualization of application's features and functionalities, User Interface Design, Front-end Implementation, Autonomous Project Development</p>
                 </div>
-                <div class="project-url">
+                <div class="project-url gradient">
                     <h2>URL</h1>
                     <a href="Gradient-generator/index.html" target="_blank">https://isaure-lohest.com/Gradient-generator-project/Gradient-generator/index.html</a>
                 </div>
@@ -44,8 +44,8 @@
             <div class="cards-container">
                 <p class="responsive">This project is designed with Material Design principles, focusing on clean interfaces, bold colors, and user-friendly interactions for a seamless experience. This project offers a visually appealing, user-centric environment, prioritizing simplicity and functionality.</p>
                 <div class="project-card project-card-video">
-                    <img src="../ressources/gradient-temp.png" class="video-placeholder" alt="Placeholder Image John Scissors project">
-                    <video class="video-projet" autoplay loop muted preload="auto"></video>
+                    <img src='../ressources/gradient-temp.png'class="video-placeholder" alt="Placeholder Image Gradient Generator project">
+                    <video src='../ressources/video-gradient.mp4' class="video-projet" autoplay loop muted preload="auto"></video> 
                 </div>
                 <p class="responsive">The application allows for both color picking and manual input of color codes.</p>
                 <div class="project-card project-card-desktop">
@@ -76,8 +76,8 @@
             <img src="../ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
             <div class="slider-container">
                 <div class="slider ">
-                    <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
-                    <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
+                    <span>Design * Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
+                    <span>Design * Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
                 </div>
             </div>
             
