--- a/John-Scissors-project/john-scissors-project.html
+++ b/John-Scissors-project/john-scissors-project.html
@@ -32,11 +32,11 @@
             <h2>John Scissors</h2>
             <div class="project-info">A demo website of a traditional barber. Know-how and expertise at customer service.</div>
             <div class="project-container">
-                <div class="project-resp">
+                <div class="project-resp barber">
                     <h2>Responsibilities</h2>
                     <p>Web design, Front-end web application Development, Launch</p>
                 </div>
-                <div class="project-url">
+                <div class="project-url barber">
                     <h2>URL</h1>
                     <a href="John-Scissors/index.html" target="_blank">https://isaure-lohest.com/John-Scissors-project/John-Scissors/index.html</a>
                 </div>
@@ -66,7 +66,7 @@
                         <div class="photo"><img src="../ressources/barber-phone4.png" alt="Isaure Lohest web developement project 1 - mobile vue"></div>
                     </div>
                 </div>
-                <p class="responsive">Web developement.</p>
+                <p class="responsive">Web developement on Visual Studio Code.</p>
                 <div class="project-card project-card-dev">
                     <div class="image-container-dev">
                         <img src="../ressources/barber-web-dev.png" alt="Isaure Lohest web developement project 1 - screen of the code editor">
@@ -83,8 +83,8 @@
             <img src="../ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
             <div class="slider-container">
                 <div class="slider">
-                    <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
-                    <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
+                    <span>Design * Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
+                    <span>Design * Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
                 </div>
             </div>
             
