--- a/index.html
+++ b/index.html
@@ -38,14 +38,27 @@
             <div class="work-container">
                 <div class="card">
                     <div class="image-container">
-                        <a href="John-Scissors-project/john-scissors-project.html" class="button">
-                            <img src="ressources/barber-temp.png" class="video-placeholder a" alt="Placeholder Image John Scissors project">
-                            <video src="ressources/video-barbier-accueil.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
-                            <a href="John-Scissors-project/john-scissors-project.html" class="button-link">View more</a>
+                        <a href="Didacmania-project/didacmania-project.html" class="button">
+                            <img src="ressources/didacmania-temp.png" class="video-placeholder c" alt="Placeholder Image Didacmanía yoga project">
+                            <video src="ressources/video-didacmania-accueil.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
+                            <a href="Didacmania-project/didacmania-project.html" class="button-link">View more</a>
                         </a>
                     </div>
                     <div class="project-info">
-                        <span>John Scissors</span>
+                        <span>Didacmanía</span>
+                        <span>2024</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image-container">
+                        <a href="Creyda-project/creyda-project.html" class="button">
+                            <img src="ressources/creyda-temp.png" class="video-placeholder c" alt="Placeholder Image Creyda yoga project">
+                            <video src="ressources/video-creyda-short-accueil.mp4" class="video-projet last" autoplay loop muted preload="auto"></video>
+                            <a href="Creyda-project/creyda-project.html" class="button-link">View more</a>
+                        </a>
+                    </div>
+                    <div class="project-info">
+                        <span>Creyda Yoga</span>
                         <span>2023</span>
                     </div>
                 </div>
@@ -62,16 +75,18 @@
                         <span>2023</span>
                     </div>
                 </div>
+            </div>
+            <div class="work-container">
                 <div class="card">
                     <div class="image-container">
-                        <a href="Creyda-project/creyda-project.html" class="button">
-                            <img src="ressources/creyda-temp.png" class="video-placeholder c" alt="Placeholder Image Creyda yoga project">
-                            <video src="ressources/video-creyda-short-accueil.mp4" class="video-projet last" autoplay loop muted preload="auto"></video>
-                            <a href="Creyda-project/creyda-project.html" class="button-link">View more</a>
+                        <a href="John-Scissors-project/john-scissors-project.html" class="button">
+                            <img src="ressources/barber-temp.png" class="video-placeholder a" alt="Placeholder Image John Scissors project">
+                            <video src="ressources/video-barbier-accueil.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
+                            <a href="John-Scissors-project/john-scissors-project.html" class="button-link">View more</a>
                         </a>
                     </div>
                     <div class="project-info">
-                        <span>Creyda Yoga</span>
+                        <span>John Scissors</span>
                         <span>2023</span>
                     </div>
                 </div>
@@ -80,6 +95,9 @@
                 <span>Are you minding a project ?</span>
                 <span class="contact-me" data-email="isaure.lohest@gmail.com"><a href="mailto:" aria-label="Lien vers l'adresse mail isaure.lohest@gmail.com"></a></span>
             </div>
+            <!-- <div class="logo-container">
+                <img src="ressources/sticker-isaure-v2-noQR.png" class="logo" alt="Logo">
+            </div> -->
 
             <div class="bird-container gauche-droite">
                 <div class="bird bird-light"></div>
@@ -89,8 +107,8 @@
             <img src="ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
             <div class="slider-container">
                 <div class="slider">
-                    <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
-                    <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
+                    <span>Design * Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
+                    <span>Design * Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
                 </div>
             </div>
         </footer>
