--- a/Creyda-project/creyda-project.html
+++ b/Creyda-project/creyda-project.html
@@ -30,7 +30,9 @@
         <main>
             <h1>Achievements</h1>
             <h2>Creyda yoga</h2>
-            <div class="project-info">A yoga website built in Wordpress for CREYDA Yoga, a yoga and welness center managed by passionate people.</div>
+            <div class="project-info">A yoga website built in Wordpress for CREYDA Yoga, a yoga and welness center managed by passionate people based in Brussels.
+                This project entailed the design and development of a minimalist website for CREYDA yoga center, aimed at those seeking both peace and personal growth.
+                The objective was to create an online space that mirrors the simplicity of yoga itself, making it easy for visitors to explore and enroll in a variety of yoga training programs.</div>
             <div class="project-container">
                 <div class="project-resp creyda">
                     <h2>Responsibilities</h2>
@@ -46,6 +48,9 @@
                     <img src="../ressources/creyda-temp.png" class="video-placeholder" alt="Placeholder Image Creyda project">
                     <video src="../ressources/video-creyda-short.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
                 </div>
+                <p class="responsive">The color scheme is inspired by natural tones, with soft hues that invoke a sense of calm and relaxation.
+                    Navigation is intuitive, ensuring that visitors can easily find the information they need, whether they are searching for beginner yoga classes, advanced training sessions, or wellness sebscriptions.
+                </p>
                 <div class="project-card project-card-desktop">
                     <div class="image-container">
                         <img src="../ressources/creyda-desktop1.png" alt="Isaure Lohest web developement project 3 - desktop vue">
@@ -54,7 +59,8 @@
                         <img src="../ressources/creyda-desktop2.png" alt="Isaure Lohest web developement project 3 - desktop vue">
                     </div>
                 </div>
-                <p class="responsive">The website is fully responsive and looks really great on mobile too.</p>
+                <p class="responsive">The website is fully responsive and looks really great on mobile too.
+                    Ensuring accessibility across all devices, the site's design is fully responsive, providing a seamless experience whether viewed on a desktop, tablet, or smartphone.</p>
                 <div class="project-card carte">
                     <div class="line">
                         <div class="image12">
