--- a/Didacmania-project/didacmania-project.html
+++ b/Didacmania-project/didacmania-project.html
@@ -38,14 +38,14 @@
                 </div>
                 <div class="project-url didacmania">
                     <h2>URL</h1>
-                    <a href="https://didacmania-test.com/" target="_blank">https://didacmania-test.com/</a>
+                    <a href="https://didacmania.com/" target="_blank">https://didacmania.com/</a>
                 </div>
             </div>
             <div class="cards-container">
                 <p class="responsive">
                     The online store of the Didacmanía project is meticulously designed to enhance user shopping experience, seamlessly integrating the capability to explore nearly 4,000 products through a variety of criteria or utilizing a convenient sliding sidebar cart feature on the right side of the screen, allowing users to effortlessly review and adjust their selections at any point in their shopping journey.</p>
                 <div class="project-card project-card-video">
-                    <img src="../ressources/didacmania-desktop4.png" class="video-placeholder" alt="Placeholder Didacmania project">
+                    <img src="../ressources/didacmania-placeholder.png" class="video-placeholder" alt="Placeholder Didacmania project">
                     <video src="../ressources/video-didacmania.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
                 </div>
                 <p class="responsive">Users can navigate the extensive toy catalog by filtering options such as categories, age groups, brands, and price ranges, ensuring they find exactly what they're looking for with ease. Highlighting new arrivals and special deals, the shop utilizes cute icons to draw client's attention. This comprehensive approach to online retail ensures a user-friendly, efficient, and enjoyable shopping journey for all visitors.</P>
@@ -96,7 +96,7 @@
                         <img src="../ressources/didacmania-back-office.png" alt="wordPress backoffice">
                     </div>
                 </div>
-                <div class="check"><a href="https://didacmania-test.com/" class="button" target="_blank">Check it out</a></div>
+                <div class="check"><a href="https://didacmania.com/" class="button" target="_blank">Check it out</a></div>
             </div>
             <div class="bird-container gauche-droite">
                 <div class="bird bird-light"></div>
