--- a/Didacmania-project/didacmania-project.html
+++ b/Didacmania-project/didacmania-project.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style-didacmania-project.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Rajdhani&display=swap" rel="stylesheet">
     <link rel="icon" href="../ressources/favicon-isaure.png" type="image/png">
     <meta name="description" content="Isaure's Lohest web developement portfolio : project example. Web design, Front-end web development." />
@@ -96,7 +97,7 @@
                         <img src="../ressources/didacmania-back-office.png" alt="wordPress backoffice">
                     </div>
                 </div>
-                <div class="check"><a href="https://didacmania.com/" class="button" target="_blank">Check it out</a></div>
+                <div class="check"><a href="https://didacmania.com/" class="button anton-regular" target="_blank">Check it out</a></div>
             </div>
             <div class="bird-container gauche-droite">
                 <div class="bird bird-light"></div>
