ajout projet web dev & branding can pruna

--- a/vue-portfolio/public/index.html
+++ b/vue-portfolio/public/index.html
@@ -21,7 +21,14 @@
     </script>
 
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Isaure's Lohest web developement portfolio. Web design, Front-end web development." />
+    <meta name="description" content="Isaure's Lohest web developement portfolio. Web design, Full-stack web development." />
+
+    <meta property="og:title" content="Isaure's Lohest web developement portfolio.">
+    <meta property="og:description" content=" Web design, Full-stack web development.">
+    <meta property="og:image" content="https://isaure-lohest.com/img/sticker-isaure-v2-noQR.92ab59ca.png">
+    <meta property="og:url" content="https://isaure-lohest.com/">
+    <meta property="og:type" content="website">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" /><!-- intl-tel-input CSS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><!-- jQuery (Nécessaire pour intl-tel-input) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script><!-- intl-tel-input JS -->
